--- a/practice/config/first_exe.yml
+++ b/practice/config/first_exe.yml
@@ -10,4 +10,8 @@
 
   reporting:
     module: final-stats
-    dump-xml: stats.xml
+    summary: true  # overall samples count and percent of failures
+    percentiles: true  # display average times and percentiles
+    failed-labels: false  # provides list of sample labels with failures
+    test-duration: true  # provides test duration
+    dump-csv: TaurusResult/perf_result_csv.csv
