--- a/practice/config/first_exe.yml
+++ b/practice/config/first_exe.yml
@@ -19,7 +19,7 @@
       percentiles: true  # display average times and percentiles
       failed-labels: false  # provides list of sample labels with failures
       test-duration: true  # provides test duration
-      dump-csv: perf_result_csv.csv
+      dump-csv: TaurusResult/perf_result_csv.csv
     - module: blazemeter
       report-name: Taurus test report
       test: Taurus test
