--- a/practice/config/report.yml
+++ b/practice/config/report.yml
@@ -17,7 +17,7 @@
 
   reporting:
     - module: final-stats
-      dump-csv: TaurusResult/stats.xml
+      dump-xml: TaurusResult/stats.xml
 
   settings:
     artifacts-dir: TaurusResult
